--- a/WorldBank API.ipynb
+++ b/WorldBank API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "6b4a7d11-8017-46db-99a5-e55a6beb8ce4",
    "metadata": {
     "tags": []
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "6b9fdc3e-4a22-4b67-bc33-e6000d0b0203",
    "metadata": {
     "tags": []
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "5a217158-8a4f-4294-9b6d-68bcafbb0ebe",
    "metadata": {
     "tags": []
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "8c7e7405-0f08-436d-b880-4df73803c962",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "9600b522-d57e-440a-97d1-9a70a85f2c4b",
    "metadata": {
     "tags": []
@@ -228,7 +228,7 @@
        " {'Year': '2022', 'Population Total': 25978935}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "7d8da788-ac5d-4575-a14c-bbbde2486bff",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#aus_pop_df = pd.DataFrame(pop_values)\n",
+    "aus_pop_df = pd.DataFrame(pop_values)\n",
     "#aus_merged_data = pd.merge(Australia_grouped_data, aus_pop_df, on=\"Date\", how=\"inner\")"
    ]
   },
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
